--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -48,7 +48,7 @@ common:
     mention: "言及"
     reaction: "リアクション"
 
-  got-it: "わかった"
+  got-it: "了解"
   customization-tips:
     title: "カスタマイズのヒント"
     paragraph: "<p>ホームのカスタマイズでは、ウィジェットを追加/削除したり、ドラッグ&ドロップして並べ替えたりすることができます。</p><p>一部のウィジェットは、<strong><strong>右</strong>クリック</strong>することで表示を変更することができます。</p><p>ウィジェットを削除するには、ヘッダーの<strong>「ゴミ箱」</strong>と書かれたエリアにウィジェットをドラッグ&ドロップします。</p><p>カスタマイズを終了するには、右上の「完了」をクリックします。</p>"
@@ -185,7 +185,7 @@ common:
     local-followers: "フォロワー (ローカルのみ)"
 
   note-placeholders:
-    a: "今どうしてる？"
+    a: "今なにしてる？"
     b: "何かありましたか？"
     c: "何をお考えですか？"
     d: "言いたいことは？"
@@ -320,8 +320,8 @@ common:
   search: "検索"
   delete: "削除"
   loading: "読み込み中"
-  ok: "おｋ"
-  cancel: "やめる"
+  ok: "了承"
+  cancel: "取消"
   update-available-title: "更新があります"
   update-available: "Misskeyの新しいバージョンがあります({newer}。現在{current}を利用中)。ページを再度読み込みすると更新が適用されます。"
   my-token-regenerated: "あなたのトークンが更新されたのでサインアウトします。"
@@ -336,8 +336,8 @@ common:
   view-on-remote: "正確な情報を見る"
   renoted-by: "{user}がRenote"
   no-notes: "投稿がありません"
-  turn-on-darkmode: "闇に飲まれる"
-  turn-off-darkmode: "光あれ"
+  turn-on-darkmode: "ダークテーマ"
+  turn-off-darkmode: "ライトテーマ"
 
   error:
     title: "問題が発生しました"
@@ -1106,12 +1106,12 @@ desktop/views/components/notes.vue:
   retry: "リトライ"
 
 desktop/views/components/notifications.vue:
-  empty: "ありません！"
+  empty: "ありません"
 
 desktop/views/components/post-form.vue:
-  posted: "投稿しました！"
-  replied: "返信しました！"
-  reposted: "Renoteしました！"
+  posted: "投稿しました"
+  replied: "返信しました"
+  reposted: "Renoteしました"
   note-failed: "投稿に失敗しました"
   reply-failed: "返信に失敗しました"
   renote-failed: "Renoteに失敗しました"
@@ -1131,7 +1131,7 @@ desktop/views/components/renote-form.vue:
   renote: "Renote"
   renote-home: "Renote (Home)"
   reposting: "しています..."
-  success: "Renoteしました！"
+  success: "Renoteしました"
   failure: "Renoteに失敗しました"
 
 desktop/views/components/renote-form-window.vue:
@@ -1167,7 +1167,7 @@ desktop/views/components/settings.2fa.vue:
   activate-key: "クリックしてセキュリティキーをアクティベートしてください"
   security-key-name: "キー名"
   register-security-key: "キーの登録を完了"
-  something-went-wrong: "わー！ キーを登録する際に問題が発生しました:"
+  something-went-wrong: "キーを登録する際に問題が発生しました:"
   key-unregistered: "キーが削除されました"
   use-password-less-login: "パスワードなしのログインを使用"
 
@@ -1745,7 +1745,7 @@ desktop/views/widgets/notifications.vue:
 desktop/views/widgets/polls.vue:
   title: "アンケート"
   refresh: "他を見る"
-  nothing: "ありません！"
+  nothing: "ありません"
 
 desktop/views/widgets/post-form.vue:
   title: "投稿"
@@ -1759,12 +1759,12 @@ desktop/views/widgets/profile.vue:
 desktop/views/widgets/trends.vue:
   title: "トレンド"
   refresh: "他を見る"
-  nothing: "ありません！"
+  nothing: "ありません"
 
 desktop/views/widgets/users.vue:
   title: "おすすめユーザー"
   refresh: "他を見る"
-  no-one: "いません！"
+  no-one: "いません"
 
 mobile/views/components/drive.vue:
   used: "使用中"
@@ -1832,7 +1832,7 @@ mobile/views/components/note-sub.vue:
   cat: "cat"
 
 mobile/views/components/notifications.vue:
-  empty: "ありません！"
+  empty: "ありません"
 
 mobile/views/components/sub-note-content.vue:
   private: "この投稿は非公開です"
